Changes since version 1.4
--------------------------------------

Style Changes
=============

* Flex-Layout: The following widgets have a changed layout based on flex-box and grid:
  * Fader (new DOM element: _track as container for _handle)


Changes since version 1.1
--------------------------------------

New Features
============

o added DragCapture. DragCapture implements a pointer capture logic. It is now used
  in DragValue, Drag and ResponseHandler. It automatically supports multi touch.

o Iconset as font

Improvements
============

o DragValue: The 'blind_angle' option now applies to all choices of the 'direction'
  option.

o DragValue: can be reversed by setting the option "reverse" to true.

o Drag: supports CSS transformations if option "transform" is set to true.

o ResponseHandle: has real MultiTouch support. This also applies to the z_handling
  gesture, which means that any number of touch points can now drag handles in the
  EQ.

o Button/Toggle: set URL or class name for icon

o Faders got title and value ChildWidgets.

o Scale: New child elements pointer and bar to visualize values within Scale.

o Window: complete rewrite. Less DOM nodes, less complexity, using new
  toolkit APIs. Additionally layout switched from table-like div zoo to
  more slick flexbox.

o Value: new option "readonly"

o Refactorering to allow using toolkit in module context. This allows
  using it from within Angular or similar frameworks and to bundle it
  with tools such as webpack.

o ValueKnob: All children are of class ChildWidget now. This breaks the
  use of "label" option for TK.Label, had to be renamed to "title".
  
o MeterBase: Title and value label are real widgets now. Their name changed
  so they don't have an underscore any more:
  _label -> label and _title -> title

o MultiMeter: Title is a ChildWidget now. Name changed from _title to title.
  
o ValueButton: _bar, _base and marker were removed in favour of new Scale ChildWidget.
x

API Changes