@@ -7,6 +7,13 @@ Style Changes
 * Flex-Layout: The following widgets have a changed layout based on flex-box and grid:
   * Fader (new DOM element: _track as container for _handle)
 
+Fixes
+=====
+
+* TK.element: object argument wasn't handled as attributes but as styles
+  opposed to what the documentation says. This might break backward compatibility
+  in some cases.
+  
 
 Changes since version 1.1
 --------------------------------------
